package seedu.duke.command.filter;

import seedu.duke.command.Command;
import seedu.duke.command.CommandResult;

public abstract class FilterCommand extends Command {

}
